--- a/angular.json
+++ b/angular.json
@@ -28,10 +28,16 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              {
+                "glob": "**/*",
+                "input": "./node_modules/@ant-design/icons-angular/src/inline-svg/",
+                "output": "/assets/"
+              }
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles/styles.less",
+              "src/styles/styles.scss"
             ],
             "scripts": []
           },
@@ -99,7 +105,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles/styles.less",
+              "src/styles/styles.scss"
             ],
             "scripts": []
           }
