--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "karma-coverage": "2.2.0",
     "karma-jasmine": "5.0.0",
     "karma-jasmine-html-reporter": "1.7.0",
+    "ng-mocks": "13.4.2",
     "typescript": "4.6.3"
   }
 }
