--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@angular/platform-browser": "13.3.3",
     "@angular/platform-browser-dynamic": "13.3.3",
     "@angular/router": "13.3.3",
+    "angular-animations": "0.11.0",
+    "ag-grid-angular": "27.1.1",
+    "ag-grid-community": "27.1.0",
     "ng-zorro-antd": "13.1.1",
     "bootstrap": "4.6.1",
     "rxjs": "7.5.5",
